Integration of Blockchain and Frontend

--- a/smart_contract/.env
+++ b/smart_contract/.env
@@ -1,2 +1,2 @@
-MNEMONIC=""
-PROJECT_ID=""
+MNEMONIC=charge strike manage injury suit evolve school pole half object diet boring
+PROJECT_ID=59aff5b12dea44bd8f2dd146f3db59db
